force-app/main/default/objects/Tickets__c/Tickets__c.object-meta.xml
<CustomObject>
    <description>Tickets: record types: Defect, Story</description>
    <label>Tickets</label>
    <nameField>
        <label>Ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>