force-app/main/default/objects/Tickets__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>Auto Generate Number</description>
    <label>Number</label>
    <type>AutoNumber</type>
</CustomField>